<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">apartamentos</string>
    <string name="entrar">¡Entrar!</string>
    <string name="apartamentos">Apartamentos</string>
    <string name="requisitos_para_arrendar">Requisitos para arrendar</string>
    <string name="sedes">Sedes</string>
    <string name="acerca_de">Acerca de</string>
    <string name="Iniciar_Sesion">iniciarsesion</string>
    <string name="CASA">CASA</string>
    <string name="registrarse">Registrarse</string>
    <string name="Apartamento">Apartamento</string>
    <string name="apartamento_en_arriendo_3_habitaciones_2_ba_os_patio_cocina_integral_sala_comedor_red_de_gas">Apartamento en arriendo 3 habitaciones, 2 baños, patio.cocina integral, sala comedor, red de gas</string>
    <string name="apartamento_en_arriendo_2_habitaciones_1_ba_o_sala_parqueadero_5to_piso">Apartamento en arriendo, 2 habitaciones, 1 baño, sala, parqueadero, 5to piso</string>
    <string name="apartamento_en_arriendo_3_habitaciones_2_ba_os_red_de_gas_cocina_interal_horno_parqueadero_sala_comedor_1_000_000">Apartamento en arriendo, 3 habitaciones, 2 baños, red de gas, cocina interal, horno, parqueadero, sala comedor. $1.000.000</string>
    <string name="apartamento_en_arriendo_2_habitaciones_2_ba_os_sala_cocina_sencilla_900_000">Apartamento en arriendo 2 habitaciones, 2 baños, sala, cocina sencilla.$900.000</string>
    <string name="apartamento_en_arriendo_2_habitaciones_1_ba_o_cocina_sencilla_red_de_gas_sala_comedor_800_000">Apartamento en arriendo, 2 habitaciones, 1 baño, cocina sencilla, red de gas, sala comedor. $800.000</string>
    <string name="contacto">Contacto</string>
    <string name="email_gmail_com">email.@gmail.com</string>
    <string name="_3330003333">3330003333</string>
    <string name="administraci_n_y_arrendamientos_de_propiedad_raiz_avaluos_reparaci_n_y_mantenimiento_de_inmuebles_asesorias_juridicas_contables_y_tributarias">Administración y Arrendamientos de Propiedad Raiz - Avaluos - Reparación y Mantenimiento de Inmuebles - Asesorias Juridicas Contables y Tributarias.</string>
    <string name="texto">texto</string>
    <string name="texto2">texto2</string>
    <string name="texto3">texto3</string>
    <string name="texto4">texto4</string>
    <string name="texto6">texto6</string>
    <string name="a_p_a_r_t_a_m_e_n_t_o_s">A P A R T A M E N T O S</string>
    <string name="IMG">IMG</string>
    <string name="apartamentos_en_arriendo">APARTAMENTOS EN ARRIENDO</string>
    <string name="ver_imagenes">ver imagenes</string>
    <string name="requisito">requisito</string>
    <string name="requisitos_para_arrendar_una_propiedad">Requisitos para arrendar una propiedad</string>
    <string name="inquilino_carta_laboral_ultima_colilla_de_pago_fotocopia_de_la_cedula_al_150_extractos_bancarios_si_los_tiene_y_o_planilla_de_pago_de_la_eps_deudor_solidario_laboral_carta_laboral_ultima_colilla_de_pago_fotocopia_de_la_cedula_ampliada_al_150_extractos_bancarios_si_los_tiene_y_o_planilla_de_pago_de_la_eps_deudor_solidario_con_propiedad_raiz_fotocopia_de_la_cedula_al_150_certificado_de_libertad_y_tradici_n_reciente_este_no_pude_tener_afectacion_a_vivienda_familiar_embargo_patrimonio_esufructo_folio_cerrado_las_propiedades_deben_estar_ubicadas_en_ciudades">INQUILINO Carta laboral, ultima colilla de pago, fotocopia de la cedula al 150%, extractos bancarios si los tiene y/o planilla de pago de la EPS. DEUDOR SOLIDARIO LABORAL Carta Laboral, ultima colilla de pago, fotocopia de la cedula ampliada al 150%, extractos bancarios si los tiene y/o planilla de pago de la EPS. DEUDOR SOLIDARIO CON PROPIEDAD RAIZ Fotocopia de la cedula al 150%, certificado de libertad y tradición reciente (ESTE NO PUDE TENER AFECTACION A VIVIENDA FAMILIAR, EMBARGO, PATRIMONIO, ESUFRUCTO, FOLIO CERRADO). Las propiedades deben estar ubicadas en ciudades</string>
    <string name="text9">text9</string>
    <string name="text10">text10</string>
    <string name="text11">text11</string>
    <string name="servicios">Servicios</string>
    <string name="img">img</string>
    <string name="textviewinicio">TextViewinicio</string>
    <string name="b_i_e_n_v_e_n_i_d_o">B I E N V E N I D O</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="confirme_los_datos">confirme los datos</string>
    <string name="confirmelosdatos">CONFIRME LOS DATOS</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="atras">ATRAS</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">contraseña</string>
</resources>