<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".MainActivity3">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="607dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-3dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartamento_en_arriendo_2_habitaciones_1_ba_o_cocina_sencilla_red_de_gas_sala_comedor_800_000"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="607dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartamento_en_arriendo_2_habitaciones_2_ba_os_sala_cocina_sencilla_900_000"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="607dp"
        android:layout_height="130dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartamento_en_arriendo_3_habitaciones_2_ba_os_red_de_gas_cocina_interal_horno_parqueadero_sala_comedor_1_000_000"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="591dp"
        android:layout_height="140dp"
        android:contentDescription="@string/text10"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/casa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="590dp"
        android:layout_height="147dp"
        android:contentDescription="@string/text9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/casa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="586dp"
        android:layout_height="124dp"
        android:contentDescription="@string/text11"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:srcCompat="@drawable/casa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>