<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="50dp"
        android:text="@string/contacto"
        android:textSize="36sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="67dp"
        android:text="@string/email_gmail_com"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="352dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/_3330003333"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>